[package]
name = "phonecall"
version = "0.1.0"
edition = "2021"
description = "A tiny easy to use helper that makes function calls through threads/ tasks easier with tokio channels "
authors = ["Dewyer <dewyerer@gmail.com>"]
documentation = "https://docs.rs/telephone"
keywords = ["tokio", "multi-threading", "safe-calls", "channels"]
license = "MIT"
repository = "https://github.com/Dewyer/telephone"

[dependencies]
tokio = { version = "1.5.0", features = ["sync"] }
tracing = { version="0.1.37", optional=true }
thiserror = "1.0"

[dev-dependencies]
futures = "0.3.25"
chrono = "0.4.23"
tokio = { version = "1.5.0", features = ["sync", "full"] }
anyhow = "1.0.68"

[features]
default = []
tracing = ["dep:tracing"]
